log/build_2024-09-29_21-19-17/tb_control/stderr.log
  File "/home/kyle/testWS/install/tb_control/lib/python3.8/site-packages/tb_control/tb_openLoop.py", line 29
    if(!self.run_flag):
       ^
SyntaxError: invalid syntax

